[package]
authors = ['PureStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'Unlicense'
name = 'moonbeam-runtime'
repository = 'https://github.com/PureStake/moonbeam/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
zeroize = { version = "1.0.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
parking_lot = { version = "0.10.0", optional = true }
rand = { version = "0.7.3", optional = true, features = ["small_rng"] }
regex = { version = "1.3.1", optional = true }
base58 = { version = "0.1.0", optional = true }
log = "0.4.8"
sha3 = { version = "0.8", default-features = false }


ed25519-dalek = { version = "1.0.0-pre.3", default-features = false, features = ["u64_backend", "alloc"], optional = true }
blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
tiny-keccak = { version = "2.0.1", features = ["keccak"], optional = true }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false, optional = true }
sha2 = { version = "0.8.0", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
twox-hash = { version = "1.5.0", default-features = false, optional = true }
libsecp256k1 = { version = "0.3.2", default-features = false, features = ["hmac"], optional = true }
merlin = { version = "2.0", default-features = false, optional = true }


pallet-aura = { version = "2.0.0-dev", default-features = false, package = "pallet-aura", path = "../vendor/frontier/vendor/substrate/frame/aura" }
pallet-balances = { version = "2.0.0-dev", default-features = false, package = "pallet-balances", path = "../vendor/frontier/vendor/substrate/frame/balances" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/support" }
pallet-grandpa = { version = "2.0.0-dev", default-features = false, package = "pallet-grandpa", path = "../vendor/frontier/vendor/substrate/frame/grandpa" }
pallet-randomness-collective-flip = { version = "2.0.0-dev", default-features = false, package = "pallet-randomness-collective-flip", path = "../vendor/frontier/vendor/substrate/frame/randomness-collective-flip" }
pallet-sudo = { version = "2.0.0-dev", default-features = false, package = "pallet-sudo", path = "../vendor/frontier/vendor/substrate/frame/sudo" }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system", path = "../vendor/frontier/vendor/substrate/frame/system" }
pallet-timestamp = { version = "2.0.0-dev", default-features = false, package = "pallet-timestamp", path = "../vendor/frontier/vendor/substrate/frame/timestamp" }
pallet-transaction-payment = { version = "2.0.0-dev", default-features = false, package = "pallet-transaction-payment", path = "../vendor/frontier/vendor/substrate/frame/transaction-payment" }
frame-evm = { version = "2.0.0-dev", default-features = false, package = "pallet-evm", path = "../vendor/frontier/vendor/substrate/frame/evm" }
frame-executive = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/executive" }
sp-api = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/api" }
sp-block-builder = { path = "../vendor/frontier/vendor/substrate/primitives/block-builder", default-features = false, version = "2.0.0-dev"}
sp-consensus-aura = { version = "0.8.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/consensus/aura" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/core" }
sp-inherents = { path = "../vendor/frontier/vendor/substrate/primitives/inherents", default-features = false, version = "2.0.0-dev"}
sp-io = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/io" }
sp-offchain = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/offchain" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/runtime" }
sp-session = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/session" }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/std" }
sp-transaction-pool = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/transaction-pool" }
sp-version = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/version" }
frame-system-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/system/rpc/runtime-api/" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/transaction-payment/rpc/runtime-api/" }

frontier-rpc-primitives = { default-features = false, path = "../vendor/frontier/rpc/primitives" }
frame-ethereum = { version = "0.1.0", default-features = false, package = "pallet-ethereum", path = "../vendor/frontier/frame/ethereum" }

sp-runtime-interface = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/runtime-interface" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", path = "../vendor/frontier/vendor/substrate/utils/wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"pallet-aura/std",
	"pallet-balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-sudo/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"frame-ethereum/std",
	"frame-evm/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frontier-rpc-primitives/std",
	"sha3/std",

	"lazy_static",
	"parking_lot",
	"rand",
	"regex",
	"base58",

	"full_crypto",
]

full_crypto = [
	"ed25519-dalek",
	"blake2-rfc",
	"tiny-keccak",
	"schnorrkel",
	"hex",
	"sha2",
	"twox-hash",
	"libsecp256k1",
	"sp-runtime-interface/disable_target_static_assertions",
	"merlin",
]
