[package]
name = "moonbeam-cli"
authors = [ "PureStake" ]
edition = "2021"
version = "0.26.1"
[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
log = "0.4.8"
parity-scale-codec = "3.0.0"

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", default-features = false }
service = { package = "moonbeam-service", path = "../service", default-features = false }

# Substrate
frame-benchmarking-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-finality-grandpa = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-service = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-sysinfo = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-telemetry = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-tracing = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
substrate-prometheus-endpoint = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
try-runtime-cli = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p", optional = true }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-client-service = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
cumulus-primitives-core = { git = "https://github.com/zeitgeistpm/cumulus", branch = "polkadot-v0.9.26-libp2p" }
nimbus-primitives = { git = "https://github.com/zeitgeistpm/nimbus", branch = "polkadot-v0.9.26-libp2p" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

[features]
default = [ "moonbase-native", "moonbeam-native", "moonriver-native", "wasmtime", "westend-native" ]

westend-native = [ "polkadot-service/westend-native" ]

moonbase-native = [ "service/moonbase-native", "westend-native" ]
moonbeam-native = [ "service/moonbeam-native" ]
moonriver-native = [ "service/moonriver-native" ]

runtime-benchmarks = [ "service/runtime-benchmarks" ]
try-runtime = [
	"service/try-runtime",
	"try-runtime-cli",
]
wasmtime = [ "sc-cli/wasmtime" ]

moonbase-runtime-benchmarks = [ "service/moonbase-runtime-benchmarks" ]
