[package]
name = "moonbeam-rpc-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
futures = { version = "0.3", features = [ "compat" ] }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.14.0", default-features = false, features = [ "macros", "server" ] }
tokio = { version = "1.10", features = [ "sync", "time" ] }

# Moonbeam
moonbeam-client-evm-tracing = { path = "../../evm-tracing" }
moonbeam-rpc-core-debug = { path = "../../rpc-core/debug" }
moonbeam-rpc-core-types = { path = "../../rpc-core/types" }
moonbeam-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }

# Substrate
sc-client-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-utils = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-block-builder = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-blockchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-core = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-io = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Frontier
ethereum = { version = "0.12.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = "0.13.1"
fc-consensus = { git = "https://github.com/zeitgeistpm/frontier", branch = "polkadot-v0.9.26-libp2p" }
fc-db = { git = "https://github.com/zeitgeistpm/frontier", branch = "polkadot-v0.9.26-libp2p" }
fc-rpc = { git = "https://github.com/zeitgeistpm/frontier", branch = "polkadot-v0.9.26-libp2p", features = [ "rpc_binary_search_estimate" ] }
fp-rpc = { git = "https://github.com/zeitgeistpm/frontier", branch = "polkadot-v0.9.26-libp2p" }
