[package]
name = "moonbeam-rpc-txpool"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
jsonrpsee = { version = "0.14.0", default-features = false, features = [ "macros", "server" ] }
rlp = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.9"

# Moonbeam
moonbeam-rpc-core-txpool = { path = "../../rpc-core/txpool" }
moonbeam-rpc-primitives-txpool = { path = "../../../primitives/rpc/txpool" }

# Substrate
frame-system = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-transaction-pool = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sc-transaction-pool-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-api = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-blockchain = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-io = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-runtime = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }
sp-std = { git = "https://github.com/zeitgeistpm/substrate", branch = "polkadot-v0.9.26-libp2p" }

# Frontier
ethereum-types = "0.13.1"
fc-rpc = { git = "https://github.com/zeitgeistpm/frontier", branch = "polkadot-v0.9.26-libp2p", features = [ "rpc_binary_search_estimate" ] }
